Add crossed swords favicon

--- a/judgement/static/index.html
+++ b/judgement/static/index.html
@@ -309,6 +309,7 @@
     .pattern-card-header { grid-template-columns: 80px 100px 1fr; }
   }
 </style>
+<link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
